v0.1.3/_sources/methoddocs/managers.md.txt
# ape.managers

## Accounts

```{eval-rst}
.. automodule:: ape.managers.accounts
    :members:
    :special-members:
    :exclude-members: __repr__, __weakref__, __metaclass__, __init__
```

## Compilers

```{eval-rst}
.. automodule:: ape.managers.compilers
    :members:
```

## Chain

```{eval-rst}
.. automodule:: ape.managers.chain
    :members:
    :special-members:
    :exclude-members: __repr__, __weakref__, __metaclass__, __init__
```

## Config

```{eval-rst}
.. automodule:: ape.managers.config
    :members:
    :special-members:
    :exclude-members: __repr__, __weakref__, __metaclass__, __init__
```

## Converters

```{eval-rst}
.. automodule:: ape.managers.converters
    :members:
```

## Networks

```{eval-rst}
.. automodule:: ape.managers.networks
    :members:
```

## Project

```{eval-rst}
.. automodule:: ape.managers.project
    :members:
    :special-members:
    :exclude-members: __repr__, __weakref__, __metaclass__, __init__
```

## Query

```{eval-rst}
.. automodule:: ape.managers.query
    :members:
    :special-members:
    :exclude-members: __repr__, __weakref__, __metaclass__, __init__
```